# intelliagent

./: .env  .env.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  FIXES_SUMMARY.md  OPTIMIZATION.md  PROJECT_TREE.txt  QUICKSTART.md  QUICK_START_WEB.md  README.md  SHADCN_FIX.md  VERIFICATION_CHECKLIST.md  WEB_UPDATE.md  alembic.ini  example.py  experiences.json  generate_random_numbers.py  intelliagent.db  intelliagent.json.example  main.py  mcp_server.py  permissions.json  pyproject.toml  pytest.ini  requirements.txt  skill_example.py  skills-lock.json  start-web-dev.sh  start-web.sh  test.json  test_context7.py  test_intelliagent.py  test_mcp_json_config.py  test_prompts.py  test_sequential_thinking.py  verify-web.sh  verify_structure.py
alembic/: env.py
config/: mcp_config.json.example
core/: actor.py  builtin_tools.py  checker.py  context.py  executor.py  llm_client.py  memory.py  pdca_loop.py  planner.py  react_engine.py  react_loop.py  skill.py  skill_integration.py  skill_loader.py  skill_manager.py  tool_registry.py  tool_registry_mcp.py
docs/: 2026-06-12-issue-2-运行时日志输出标准化-brief.md  2026-06-13-issue-4-solid-refactor-brief.md  2026-06-13-issue-6-code-review-fixes-brief.md  2026-06-13-issue-8-config-unification-brief.md  2026-06-14-issue-10-deprecate-old-config-brief.md  2026-06-14-issue-12-permission-engine-redesign-brief.md  2026-06-23-issue-14-skill-mechanism-brief.md  2026-07-04-issue-30-react-engine-responsibility-brief.md  2026-07-04-issue-31-context-compression-adr-brief.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  (+32 more)
(+266 files in other folders)
