[project]
name = "intelliagent"
version = "0.1.0"
description = "IntelliAgent - 基于 ReAct 循环的代码开发助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.18.0",
    "anyio>=4.11.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.1.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
intelliagent = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
